Inital commit for gatus
Also tacking on the rook-ceph recovery stuff. Its just info

--- a/kubernetes/components/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/sops/cluster-secrets.sops.yaml
@@ -3,53 +3,55 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:FYJ/UBDPe+N/goGDgoaX,iv:ALg6VLE4hgO99rvtjaUrVRVyvYhY4VjB6yLgLE/4hV8=,tag:n9OdaLpqGa8yk2UBaHtRrg==,type:str]
-  #ENC[AES256_GCM,data:CM7bUsPA6zFnDjGbbt6CwcVkWi8=,iv:NCfTuKdEwD4puAKwziFjvL703iIOS86qpGvjNh7yL/c=,tag:Zmdk6sxJ5Bj3UkNboqi29A==,type:comment]
-  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:EtzD1H+y145nF+g1R9eCwuGXCWn3IGD4iO4VJNLoI2A=,iv:0rwk4Q44vHhDjkedVHugvcqjZPexDu6DirwE7n1koZc=,tag:PKaKhzMLU49AFdooM0vmxQ==,type:str]
-  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:AiLFbc5uFUWogN1i1xaIiJ5vsYPYRxn/9CxxnUARt9P1bRd8FOqZpQaIGLGbf20686PTPQU3+ytdNsSWQP5t3g==,iv:2KzhijOK9kEvJCC3JcZojRz2K4yWQBnlRUy0wYUT6Vo=,tag:yR7UxvqnjDco4fOGUk9bdg==,type:str]
-  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:9EbPY9iB217PCczqMyO743ggWfrojNxA3kHdp2b5a4GQM2Gf7ody67TQN7rDEvqhrMYv8I9vh2Ys,iv:GI9HtADMcfkpZwtuYOGlRQZ8m3qdeyml2rtIvRcGF1A=,tag:zXmIaqEix57pqKlxIfHIoQ==,type:str]
-  CLUSTER_NAME: ENC[AES256_GCM,data:AWGrOLmskBmj,iv:qjs+74Awjp1INiblNoRKjudF6gIxw89KG0lNVH3X7wU=,tag:XKiHUQRp8izXEfd7qEBkyg==,type:str]
-  #ENC[AES256_GCM,data:jrChJrVotwZomssx+KZM1Q==,iv:BgjAijsgpVml59UkWgm4tO8p9NUkJZ2/UB/l0BxhGik=,tag:D/Kz72jpvzSC9w9cKFr6qg==,type:comment]
-  RESTIC_PASSWORD: ENC[AES256_GCM,data:W9zp9EtT9irctw==,iv:fstRPGVIRzeSFAf8yYY2BbLy8OSconydjN83NWkuriA=,tag:5R7xPObqlBBeTTdgQMUeMA==,type:str]
-  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:o9nS1pNQhH5yV2eQKVsTFvBeV9I=,iv:62tU3/7O5cXggqVpzGngiMEQOXyKryIGR9POtHYDFpw=,tag:S+70+F+9UgsPKFa8jWCfqQ==,type:str]
-  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:87MRHqFo1GOMmi69mYMIq1NoGr0FRpbYP85Mb3gQg+xCGLUpyK5X/Q==,iv:pCfbe+Uyo8SRXCfbsshoKnEeWJdqBDeOSoS+4kA/GRg=,tag:2YrdUKYDQfbOB9DAEZoekg==,type:str]
-  #ENC[AES256_GCM,data:NYMkXXY14e1f,iv:Qp/yHM+gPf3nKO59wNoPGN8GmQ7CYyp4cRt84aUD1rY=,tag:PJ91oDirj5phNZUImqFwXw==,type:comment]
-  NETWORK_BGP_SVC_CIDR: ENC[AES256_GCM,data:J/uw3bGrlzNGyYtKULw=,iv:8TW2errzH5q5/H2GfO6u4mmyRh76qVS/213luLfWY0w=,tag:g7asd+7U4npSmw0wceNGww==,type:str]
-  NETWORK_K8S_POD_CIDR: ENC[AES256_GCM,data:JRqFAAmb6XTSj+as,iv:BQr6zBiWg5M86px2m86Qj7JoUH0v+CjiyhEIoZQeaLQ=,tag:dMujTliM0bFWeTdwKiQ92g==,type:str]
-  #ENC[AES256_GCM,data:E2ZVgNjoEbG2bd+pfBmRqq4I,iv:XxiY7pLy6/odZWh9LvHbIEwC3DT+wncudSQpSVrOJ4M=,tag:f2xSiqa1lObGXBm9ti1tFA==,type:comment]
-  #ENC[AES256_GCM,data:ISieoYYtLFsNXv7HG4q8fMOiOY6riKzpwq6i520pyd1dQUw=,iv:cXArnXLz0kyFhCy/0cQX9+teSJuNRHto3mJhgA30hNo=,tag:uvI+rZl1HwOJhwODa1L9jg==,type:comment]
-  LB_K8S_ENDPOINT: ENC[AES256_GCM,data:QnIBnQn2zSPHqR0=,iv:DbMyIUqWqUYLtGbsUtsEK6fZ/nwVOGGIixnVocH1wME=,tag:HKdxDen49Qqd8jwevatN9Q==,type:str]
-  LB_GATEWAYAPI_EXTERNAL: ENC[AES256_GCM,data:UXf22JjhHrfqPOQ=,iv:SQ7xizkSj6+NipwgHRFOAw1FOxrlfR5DJjM2daP5Fxo=,tag:3s5jWHt9kuEFrz9Q6XuMEA==,type:str]
-  LB_GATEWAYAPI_INTERNAL: ENC[AES256_GCM,data:LI7ZctXNTPd5HKA=,iv:vgnjRY0+ctLGcYjYAYpaMjC84dSRNtezeuJ9k/HzGdg=,tag:in7KuiNbHG9CCy8fGY5Yiw==,type:str]
-  LB_LLDAP: ENC[AES256_GCM,data:LntMJWucLeSrxQc=,iv:MdHVdfcB9ZV47NM8b7NpT8X2aTSyuE2Qr0nzrZ+dVog=,tag:Yd+2TL6RJGB97bGU+k1MZQ==,type:str]
-  #ENC[AES256_GCM,data:c+4z7ijYhGebsvfVvESvztNAMX3wgKKB2vHLTho=,iv:XZMHL1RgVjUjzOObEKOLRy1jc4jMB6i0eqMoUnX31aA=,tag:x5kG8Ad25yPF+YOIA/KuMg==,type:comment]
-  LB_KAS: ENC[AES256_GCM,data:2YgJI2Waa7pKlx4=,iv:csEmeXqbu2Zgk8U9bBpW7Lfj2Vnr2qzCYdaXS6jwE/4=,tag:weoojQNQfzuVx7mzq0H86Q==,type:str]
-  LB_PLEX: ENC[AES256_GCM,data:LhKoW9yfTlIj0jM=,iv:72QQPzu1nnxKejlMEwcabZcfRqxWboLGPJNkBV7nJg0=,tag:K1/N0btWbIGQ98Nda+FGvQ==,type:str]
-  LB_K8S_GATEWAY: ENC[AES256_GCM,data:DxVkgt1VX4Spq+M=,iv:QemVLNFUzVpOS0sSTeNqgf65mMTG/M0QPavLTBkTLdM=,tag:OZqF4hlvDF/cmsSPchRe8Q==,type:str]
-  LB_HASS: ENC[AES256_GCM,data:KAwyMTQmkqmzQys=,iv:fm+0AgM6iLihoqM4Sdmy59AgpeVmWxzx2qUbI//Z/DI=,tag:IM+2wmLRWq7qZoUes/KIUA==,type:str]
-  LB_INGRESS_EXTERNAL: ENC[AES256_GCM,data:/k5Vp0SWJ+r6DMQ=,iv:3t392KJtWSNVX5JeJ45qqmT/SgpxLazUjZS9AFojRS8=,tag:zVeKHuPU9OOK3A8mv8OMtg==,type:str]
-  LB_INGRESS_INTERNAL: ENC[AES256_GCM,data:kPygGQkNx05/Js4=,iv:ZNgwhgGEsmfEmhS8zhyFPsZ75MFUst5a1amrPowrzNo=,tag:C1H1kdmRzpLy8vMEhW5LZw==,type:str]
-  #ENC[AES256_GCM,data:oDywHBTManYhmT/2z/GAZw==,iv:lv7WEXuX3hYSFfFtONnL4+yR22bQreE37YsiOvbRIBg=,tag:dHsEct0ZaJM9D42G1y13Xw==,type:comment]
-  LB_CEPH_MONS: ENC[AES256_GCM,data:wAqBpsFO1jwD7oA=,iv:REulC2lrIfAuE78BxJUdfAEcLPsx79ItN/viFXO8d0s=,tag:VddDqo7YkBWpB57sYFPTyw==,type:str]
-  LB_INGRESS_BACKUPS_BUCKET: ENC[AES256_GCM,data:nUYWiNzAgnWA6Fg=,iv:pNgXVm5D6vY1zzfX0VG7VxTD58OYgWEMhHA6NPn9TfM=,tag:650QiUvVl/1FBPzTGUVADw==,type:str]
-  LB_HYPERHDR: ENC[AES256_GCM,data:7Yx2nw9NHa1XHzQ=,iv:Euv57QISPRQ02lom6cq2L1QZepC+AWxrK0MH/OdHF6E=,tag:u4HcGQa/vxLFZ/eJoiEreQ==,type:str]
-  LB_MQTT: ENC[AES256_GCM,data:bRkyt78dQHU4rbA=,iv:kLCnQDfaeQDXuj81S+BqH7itJU83WPdZIm77TJNuVjU=,tag:bqwJDYqt3uXvUED2VgL9gw==,type:str]
-  LB_CODER: ENC[AES256_GCM,data:OXTU1BDCgcBLYUs=,iv:5oLMCwr74rbLRzTddjXQrbWoqTxYqNrQjUvg7aIWKL8=,tag:inTkTOy0dsUvOBKAMusLxg==,type:str]
-  LB_FRIGATE: ENC[AES256_GCM,data:/5OHzYzb2KiRocw=,iv:rrfASfhRukVwCc0pOrEiSccyaa5Gq+3Sk1Eu6XxCb6k=,tag:8MeOIt8GRJ2uHiw2oahNsA==,type:str]
-  #ENC[AES256_GCM,data:lfdu4+/33hAu3n+h871HgK7DPxV/GWx9zAt1wCL16hL2Wz0Nb4tsJEPn,iv:aRqrRD5kFFdiPnIC9HcKDtg6TRuuseiX5gQYc+vndyw=,tag:HUhseijVuV/nhrrkmTzeLA==,type:comment]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:xTuS4UT+ZebRUYkmbQ4C,iv:BU8IADjg5dni5uJPwCMzyfDHGEwLTIM6+emwLeagjYo=,tag:18/WT8HdZdrR7nm6XKtsEg==,type:str]
+  #ENC[AES256_GCM,data:P1vmXrALd0Tj4MEpmqdab9Hb9a0=,iv:WpD22HNRgCBREy84Fwc9CXgpOHL2u8AtFQ5JBoI7FMY=,tag:HzT75d7flTJrFrbRpzKMLA==,type:comment]
+  CLOUDFLARE_AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:HRv3AQzRbuSEW3dwpRARHTSI9XWFeGFwfL8d/IJQt+g=,iv:EBq83WSkMXmJ/Uaoo9zHpDZxNlPgvW9m8WAws81Fzhk=,tag:cQC2H1Bv1ZkRcXiL3vOLpw==,type:str]
+  CLOUDFLARE_AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:toAxvh8pumG7ZUFfx5CVS0k0O+HoDOtHFKHpfnbYYJ57bl2MC3s5otxtKC1uwRF5ByP9a7+bNxiVsOqnE2HJsw==,iv:fbDEwmsLsmYoQD7RixZaWZtqndUW1OpC1cbayzHidUk=,tag:aQkT4GHdtZtzqSS0wfSMVg==,type:str]
+  CLOUDFLARE_RESTIC_REPO: ENC[AES256_GCM,data:5yG7avxmdq7FJ7BjKi0K6HYUXljXdEf/66kZrqlacn4Eo02vxJV7neZFi7iFr7K8gDoBNmEFOo4a,iv:2p0N5GT7oWWQ0kpKOrJHHPoZRpbwg0xhAZs8bb1gQg4=,tag:Wh9Lp/qqpz94gGuGpvHShw==,type:str]
+  CLUSTER_NAME: ENC[AES256_GCM,data:xSXpft7xrO3v,iv:1bOt2UwKUh8IkAS8UwPUB8uy3sWsPE93TuCKdjIsMHw=,tag:VO+p9oYtnEGVSTjnyw5xQA==,type:str]
+  #ENC[AES256_GCM,data:xgTzgvy1ghYwRyRgAZtwUw==,iv:/awHSbY/I7Fv3t/PtYRXV7koPkkcbvVXFvhET7QgU6w=,tag:5vnqH1pzUNWqFytBR5FOeQ==,type:comment]
+  RESTIC_PASSWORD: ENC[AES256_GCM,data:1QTW2pHQXi++iw==,iv:yj824wuQuDNqk5pvtsImpQsk70kq1byUo7kZZF4FwCA=,tag:rP8TD4Wp978a4nFLj33H1A==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:ZlZXQ9L/r5YRsekAz/iYFaTUNg4=,iv:SA93yI6EiIla7+Aost6Y2gneZnllZgfrLljS+DAoQI0=,tag:T88Xr9WzRPBO/bQWJFTECQ==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:WtV0mYxm8YcwjUPBj1CyWK0Zsv1pyPfGw1TntxwAy4x6ecqPFA/Ngw==,iv:26I65/yALXV3hweA2TnTiDvVjt+aCenS4ggwIh6YJts=,tag:eUcO4Xls9wlzeGgYIaxp4w==,type:str]
+  #ENC[AES256_GCM,data:OqPEGlWJLHSgJj5TNQ==,iv:Qoy2vvMWRBSpfn1Nt1JGcfVfJstrb5KfdwwK4apFU3Q=,tag:HBnLQuL0MReuF2l0oBi3Mw==,type:comment]
+  PLEX_TOKEN: ENC[AES256_GCM,data:++7RqctxVGV1HS5x/0+/K396SZY=,iv:Reddt5JJ6I+mfGBet+rE+Hw4UoZkx0u0jJ0oueLcrBk=,tag:tuJPRYMcP7iNmueoZ8W2pA==,type:str]
+  #ENC[AES256_GCM,data:vVTPoyt7MZMn,iv:R21NBEnPwCjI1biJ4MajsuXcrXuIRLtdVU4TTNneffc=,tag:QZK8U4eYtgJF2s9MQTGfXw==,type:comment]
+  NETWORK_BGP_SVC_CIDR: ENC[AES256_GCM,data:PRJ2RbynHxe2q0jXs2k=,iv:O1mZnFttNxiKtT+X/XYp0y4kFNduhGDfrL3bbl7dc2Q=,tag:+Yymz/0F67VhSpeWoBmVRA==,type:str]
+  NETWORK_K8S_POD_CIDR: ENC[AES256_GCM,data:cy4xY1vqaiakmGWt,iv:TYOVDHLQZZlz4IDaOTQnLR4D4II+2hZvWw5kAnTUYLI=,tag:2UqGHv24YZR8gYmuQlq3Yg==,type:str]
+  #ENC[AES256_GCM,data:ltLfNhsDwPHBjSuk6GNHnfg8,iv:66FS/8lF3GYd6GglQaccfZWHYl9TlZ6B89sQcWRp+8A=,tag:Eov8iS7IpEfNEK3Cwa58Bg==,type:comment]
+  #ENC[AES256_GCM,data:7EegII1ywgnBZKvuXH6ZuFkV02gncGXY/j+UukZtegkU69w=,iv:HcqJzSaSyFPmQqB6QJnah8TIQ6gjXw1aXyuUfcwagbw=,tag:/+dvNmEMiOI9AjJKhllgZA==,type:comment]
+  LB_K8S_ENDPOINT: ENC[AES256_GCM,data:qnmXhlp1AlyLTaI=,iv:5i3D4aTDsjADUMwPMyIpHss378kN1aw5wFDkBhd2fro=,tag:yAplaaQA3/u3fDkaDtJHaQ==,type:str]
+  LB_GATEWAYAPI_EXTERNAL: ENC[AES256_GCM,data:SKY0jGJcJx9QdxA=,iv:1rkOLPZldtWu3N2mqHlE/HgH8C1P/AQCerWbpqlpNJU=,tag:WVkazxbqPkyQKieAap6wAw==,type:str]
+  LB_GATEWAYAPI_INTERNAL: ENC[AES256_GCM,data:rdJCurKw83N/DCw=,iv:49UbSU2+Adzlod7KSe3rF9yZcUD3FmQMpg7B0mdHXsY=,tag:B6hC/KxhjmqzCU+tJzlW1w==,type:str]
+  LB_LLDAP: ENC[AES256_GCM,data:5Y/bxnsx3vpukY8=,iv:Zfm/wIe9VSPcHixk/ioY3Pe+LQhrRJuNw5yzrdE/tH0=,tag:Tecj8339QlAulE2jZgRcZQ==,type:str]
+  #ENC[AES256_GCM,data:DnAk892ae8Zqhbr70K9WQS9Y34UHtU3IHyZGQf8=,iv:/Rf9rPvuoYnbGFvvtMgpPWahWdl4d+kT0cX68EH7rDQ=,tag:O3euHj5I3FE+2pwL5FWfAQ==,type:comment]
+  LB_KAS: ENC[AES256_GCM,data:Ss28o4qYWVp89kU=,iv:MdV5Lh0b7pDsyGEPZeyQ6UCfIEpU8usYh0gS+DqtJj8=,tag:Ix8NOShgiz/sIh9Jaddr5w==,type:str]
+  LB_PLEX: ENC[AES256_GCM,data:no/aIPyAEXDdT6g=,iv:6Z17cz/u8xpKHvhZqJrdPYOpingD6KGJo9tMbYIu/J0=,tag:Qunn6dKWHTTYBgeoVSmUyw==,type:str]
+  LB_K8S_GATEWAY: ENC[AES256_GCM,data:MUlDw6WS2IN5iUM=,iv:xUR9NWFJoXSjiwfLu17qOk+lyO3rfQxFPoT8u0QkHdI=,tag:l2RaYpBksOAMnxEpdewo3Q==,type:str]
+  LB_HASS: ENC[AES256_GCM,data:Lhrc8cdBGzV7RJs=,iv:ML25WwoPZuxzbssrlVMYMHGRHzskJf2l8E7ny6al6yo=,tag:DUJkXM+MKrirvE/sN26vcA==,type:str]
+  LB_INGRESS_EXTERNAL: ENC[AES256_GCM,data:m4E+hbiyf7qvFOU=,iv:9SgM+atVcwGpxiPJTlCGZ/8kcxpTREg8j0YAgTDYghU=,tag:/GDHk2lfIsNQVBwtycVBEQ==,type:str]
+  LB_INGRESS_INTERNAL: ENC[AES256_GCM,data:Fel6dBg/uy2TpDU=,iv:3oQbkj1ljlwbV2Zq5IbRzQRGI49bSd2b/HnJ7kafYSY=,tag:drYJfEMckd+T02hIAx6Yyw==,type:str]
+  #ENC[AES256_GCM,data:lcbkoGmqwE1njuep+sEYCg==,iv:gLj2lv3A7NIMghkCVdpNRj+cZBCKLDjocqAmTsWvNFQ=,tag:GXD0/TpQOiHaEdGQpfbX5Q==,type:comment]
+  LB_CEPH_MONS: ENC[AES256_GCM,data:mmWh67r1H+I27fI=,iv:CUppemUufFBiVyjHDUfgOsNMOplrlnE4c29E9e7TmYs=,tag:85xrA9Ptgx/HEiNOT9WfhA==,type:str]
+  LB_INGRESS_BACKUPS_BUCKET: ENC[AES256_GCM,data:yuCiZ4a4HShaqcw=,iv:wgeWqHyY7hGQ97UarDSVS5xAjWHs0GImPIRU+N/vfc0=,tag:UPYduYZ6YFKIsIjAgau0rQ==,type:str]
+  LB_HYPERHDR: ENC[AES256_GCM,data:WMgV8o/2tGV97GA=,iv:sUk3mk3RZYMy6gWZX9tWualDmq4AUTfsAKNMJ9bIDB4=,tag:T4CLiGSGgbknnSIonMWgYQ==,type:str]
+  LB_MQTT: ENC[AES256_GCM,data:ufayQg4W3olp0Mk=,iv:AQU4gCYBjaojhHmdPbrb7eQQ0fZ0VTxmmUBT+WoN6IU=,tag:u1d/6EJDSHKK0KnTfvAmag==,type:str]
+  LB_CODER: ENC[AES256_GCM,data:/cKY5rjkWdXEmdY=,iv:GvntD4TRCnvTFGBSY5A4RdbKpLX709FshsFFsbJ1snk=,tag:HYR1UF/V23FJXxnOBfCHpw==,type:str]
+  LB_FRIGATE: ENC[AES256_GCM,data:TwRDoKQsVeppKrU=,iv:R2R95gWGNS9n9Bl2nJaJU85JUaIBPsedFve70K5tVUg=,tag:KzKKn/BrnUt1qI2V9DFZaA==,type:str]
+  #ENC[AES256_GCM,data:Tt0NsNN9lsda8qYsEDv9t+SIoCu3d6UKtJUOeecEMdN10oDs3e0ZwdXM,iv:ENesJu60HPC/aqSVkyA7RMQmVTp5ca0LMLbqsWR7W98=,tag:hpEUs70YRDJjHgPOyo+lXw==,type:comment]
 sops:
   age:
-    - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxZmVHUjE3T3luVlNLMllV
-        OUVwZmV0V040emdIZ1kydjRSRHZwT3E4d0RjCm5RM1FLQ3JVWFpSOXZVWWpUUHpq
-        ZkZLUkRqUHh6UGNqZXRXa0VQcElBNkEKLS0tIHJKQmNsUEllWlV5bjVNeHlDQllZ
-        UXlzYTdZRkFvTzkwaFdYMDUvNFkvamMKooYAd/2aSFQg4N8jXRhk3Bv7jhi4Fhxm
-        oj/jgCRBB9kZtwNnqp/sTVSkvv9CGNFS0x5pCrTlfBFb831ye9CPLQ==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-11-30T02:53:17Z"
-  mac: ENC[AES256_GCM,data:fIpzM3cIHu/YYieQuc+vvtmwGc0BeuaVsVxHYG13WUrFDed7Bj1B5tXzwaeedIWfa4AotIn9hJbeHecGFWVMnzeW48FL9oAxDzSK7/ztJoK45O/3ZOTgtGx1u8gD2N6j7vmIqPMO8RXh2HyOEPz/Zfqbyja/vmwb6gK40aSM0Dc=,iv:lSh8qXiJZnS8buiH/3eh3AyckW14Sl3whDZrbvRy9mw=,tag:jmu8d91r53Ql7Bs2pmweqw==,type:str]
+  - recipient: age1qneprk3zf33h2kjfhmqnnf72kxkj9fplnnkmg26xwp9nx2njtfns2v9mte
+    enc: |
+      -----BEGIN AGE ENCRYPTED FILE-----
+      YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4ZFd3bysxT1BEUnFwS1ZJ
+      RGl0UTJIYkQzdVA5V0VQSlhCbmtCRkxqcno4Ci8wSlc5VW03YUZzb1A5N0pvM3By
+      SVNVYTAzbElxZTI1dEtWZWE3RVBjNTAKLS0tIElJeUc4WmtCVmZMbkQzcEdDRkZW
+      VlBaU3Nxd1U4VEc0WE0ycW5vbnJkWXMKpDAZF5+I0gAFJytL2DBASA41AUbv7U6F
+      H+1/K+0cl1jeLQ5V8wReG06Umg94B2IsZWOL1+e5vPUFalUSwQ83og==
+      -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-12-02T08:01:14Z"
+  mac: ENC[AES256_GCM,data:avimWF+EhH5Z0RiBS0II+jDQTFghhx21M6U5Td9I65Ai1+kXGe5Te4rl55fLyJdEAYTP4phVii5ao/q0UM3BOv9Qu8Q2C2+1BEbma2hTIvbglVssttDBkP76k9j8z+1TTVNwwkwUZhp/TG5RgayYprf+6WKbR3abfMyScxne8XU=,iv:Mx3QNPZHtH0tJdD6+RhQdhBDNC44Z1WPyiWX5D8ob/4=,tag:cqYRQk1fhn8M0rJsoklNsg==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
