Add just 1password stuff

--- a/kubernetes/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/apps/external-secrets/kustomization.yaml
@@ -8,6 +8,6 @@ components:
 - ../../components/repos/app-template
 - ../../components/sops
 
-# resources:
-# -./external-secrets/ks.yaml
-# - ./onepassword/ks.yaml
+resources:
+- ./external-secrets/ks.yaml
+- ./onepassword/ks.yaml
