--- a/kubernetes/apps/home-automation/esphome/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/kustomization.yaml
@@ -2,9 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ./secret.sops.yaml
-- ./helmrelease.yaml
+  # - ./secret.sops.yaml
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
 labels:
-- pairs:
-    app.kubernetes.io/name: esphome
-    app.kubernetes.io/instance: esphome
+  - pairs:
+        app.kubernetes.io/name: esphome
+        app.kubernetes.io/instance: esphome
