Add talos service account

--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -266,3 +266,4 @@ patches:
 controlPlane:
   patches:
   - "@./patches/controller/cluster.yaml"
+  - "@./patches/global/machine-service-accounts.yaml"
