--- a/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
@@ -32,17 +32,17 @@ spec:
           secret.reloader.stakater.com/reload: esphome-secrets,esphome-deploykey
           reloader.stakater.com/auto: "true"
         pod:
-          annotations:
-            # DO NOT ENABLE
-            # Enabling this adds an extra default route to the container. My IoT network is locked down tight and results in failed external DNS lookups
-            # k8s.v1.cni.cncf.io/networks: home-automation-iot-dhcp
-            k8s.v1.cni.cncf.io/networks: |
-              [{
-                "name":"multus-iot",
-                "namespace": "network",
-                "ips": ["10.10.100.12/24"],
-                "mac": "aa:e9:02:a4:7e:78"
-              }]
+          # annotations:
+          #   # DO NOT ENABLE
+          #   # Enabling this adds an extra default route to the container. My IoT network is locked down tight and results in failed external DNS lookups
+          #   # k8s.v1.cni.cncf.io/networks: home-automation-iot-dhcp
+          #   k8s.v1.cni.cncf.io/networks: |
+          #     [{
+          #       "name":"multus-iot",
+          #       "namespace": "network",
+          #       "ips": ["10.10.100.12/24"],
+          #       "mac": "aa:e9:02:a4:7e:78"
+          #     }]
           securityContext:
             runAsUser: 0
             runAsGroup: 1000
