Other way around for the periods!

--- a/kubernetes/apps/home-automation/esphome/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         id_ed25519: "{{ .id_ed25519 }}"
-        id_ed25519_pub: "{{ .id_ed25519.pub }}"
+        id_ed25519.pub: "{{ .id_ed25519_pub }}"
   dataFrom:
   - extract:
       key: esphome
