--- a/kubernetes/apps/home-automation/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/helmrelease.yaml
@@ -51,7 +51,7 @@ spec:
               FRIGATE__LOG_LEVEL: info
             envFrom:
             - secretRef:
-                name: frigate-secrets
+                name: frigate-secret
             resources:
               requests:
                 memory: 2G
