Disable until I know what this does

--- a/kubernetes/apps/observability/gatus/app/resources/buddy.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/buddy.yaml
@@ -38,11 +38,11 @@ endpoints:
   alerts:
   - type: pushover
 
-external-endpoints:
-- name: Heartbeat
-  group: buddy
-  token: ${BUDDY_HEARTBEAT_TOKEN}
-  heartbeat:
-    interval: 5m
-  alerts:
-  - type: pushover
+# external-endpoints:
+# - name: Heartbeat
+#   group: buddy
+#   token: ${BUDDY_HEARTBEAT_TOKEN}
+#   heartbeat:
+#     interval: 5m
+#   alerts:
+#   - type: pushover
