--- a/kubernetes/apps/downloads/overseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/overseerr/app/helmrelease.yaml
@@ -98,7 +98,7 @@ spec:
         - "requests.${SECRET_DOMAIN}"
         parentRefs:
         - name: external
-          namespace: kube-system
+          namespace: network
           sectionName: https
         rules:
         - backendRefs:
