Migrate to unifi-dns

--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -12,6 +12,6 @@ resources:
 - ./cloudflare-dns/ks.yaml
 - ./cloudflare-tunnel/ks.yaml
 - ./envoy-gateway/ks.yaml
-- ./external-dns-unifi/ks.yaml
 - ./k8s-gateway/ks.yaml
 - ./multus/ks.yaml
+- ./unifi-dns/ks.yaml
