--- a/kubernetes/apps/downloads/overseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/overseerr/app/helmrelease.yaml
@@ -97,7 +97,7 @@ spec:
         - "request.${SECRET_DOMAIN}"
         - "requests.${SECRET_DOMAIN}"
         parentRefs:
-        - name: external
+        - name: envoy-external
           namespace: network
           sectionName: https
         rules:
