[fix] Spelled unpoller wrong

--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -14,4 +14,4 @@ resources:
 - ./kube-prometheus-stack/ks.yaml
 - ./silence-operator/ks.yaml
 - ./smartctl-exporter/ks.yaml
-- ./unppoller/ks.yaml
+- ./unpoller/ks.yaml
