--- a/kubernetes/apps/home-automation/frigate/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ./ocirespository.yaml
+- ./ocirepository.yaml
 - ./certificate.yaml
 - ../../../../components/cephfs-mounts/security-footage.yaml
 - ./externalsecret.yaml
