--- a/kubernetes/apps/observability/grafana/instance/httproute.yaml
+++ b/kubernetes/apps/observability/grafana/instance/httproute.yaml
@@ -6,7 +6,7 @@ metadata:
   name: grafana
 spec:
   hostnames:
-    - grafana.${SECRET_DOMAIN}
+    - "grafana.${SECRET_DOMAIN}"
   parentRefs:
     - name: envoy-internal
       namespace: network
