--- a/kubernetes/apps/observability/unpoller/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/unpoller/app/externalsecret.yaml
@@ -13,6 +13,7 @@ spec:
     template:
       data:
         UP_UNIFI_DEFAULT_API_KEY: "{{ .UNIFI_API_KEY }}"
+        UP_UNIFI_DEFAULT_URL: "{{ .UP_UNIFI_DEFAULT_URL }}"
   dataFrom:
     - extract:
         key: unifi
