--- a/kubernetes/apps/cert-manager/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ./clusterissuer.yaml
   - ./helmrelease.yaml
   - ./ocirepository.yaml
-  - ./externalsecrets.yaml
+  - ./externalsecret.yaml
   - ./grafanadashboard.yaml
