Just 1 password needed

--- a/kubernetes/apps/cert-manager/cert-manager/app/externalsecret.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         api-token-base64: "{{ .api-token-base64 }}"
-        api-token: "{{ .api-token }}"
+        # api-token: "{{ .api-token }}"
   dataFrom:
   - extract:
       key: cert-manager
