--- a/kubernetes/apps/cert-manager/cert-manager/app/externalsecret.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/externalsecret.yaml
@@ -12,8 +12,8 @@ spec:
     name: cert-manager-secret
     template:
       data:
-        api-token-base64: "{{ .api-token-base64 }}"
-        # api-token: "{{ .api-token }}"
+        API_TOKEN_BASE64: "{{ .API_TOKEN_BASE64 }}"
+        API_TOKEN: "{{ .API_TOKEN }}"
   dataFrom:
   - extract:
       key: cert-manager
