Add more coder urls

--- a/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/helmrelease.yaml
@@ -167,6 +167,9 @@ spec:
           - path:
               type: PathPrefix
               value: /code/
+          - path:
+              type: PathPrefix
+              value: /coder/
           filters:
           - type: URLRewrite
             urlRewrite:
