--- a/kubernetes/components/volsync/externalsecret.yaml
+++ b/kubernetes/components/volsync/externalsecret.yaml
@@ -14,17 +14,10 @@ spec:
       data:
         KOPIA_FS_PATH: /repository
         KOPIA_PASSWORD: "{{ .KOPIA_PASSWORD }}"
-        KOPIA_REPOSITORY: filesystem:///repository
+        RESTIC_PASSWORD: "{{ .KOPIA_PASSWORD }}"
+        KOPIA_REPOSITORY: s3:https://{{ .CLOUDFLARE_RESTIC_REPO }}/${CLUSTER_NAME}/pvcs/${NAMESPACE}/${APP}
+        AWS_ACCESS_KEY_ID: "{{ .CLOUDFLARE_AWS_ACCESS_KEY_ID }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .CLOUDFLARE_AWS_SECRET_ACCESS_KEY }}"
   dataFrom:
     - extract:
         key: volsync-template
-
-
-
-    # RESTIC_REPOSITORY: s3:https://${CLOUDFLARE_RESTIC_REPO}/${CLUSTER_NAME}/pvcs/${NAMESPACE}/${APP}
-    # # The repository encryption key
-    # RESTIC_PASSWORD: ${RESTIC_PASSWORD}
-    # # ENV vars specific to the chosen back end
-    # # https://restic.readthedocs.io/en/stable/030_preparing_a_new_repo.html
-    # AWS_ACCESS_KEY_ID: ${CLOUDFLARE_AWS_ACCESS_KEY_ID}
-    # AWS_SECRET_ACCESS_KEY: ${CLOUDFLARE_AWS_SECRET_ACCESS_KEY}
