Delete extra namespace

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,9 +4,9 @@ kind: Kustomization
 namespace: default
 
 components:
-  - ../../components/sops
-
+- ../../components/namespace
+- ../../components/repos/app-template
+- ../../components/sops
 resources:
-  - ./namespace.yaml
-  - ./atuin/ks.yaml
-  - ./echo/ks.yaml
+- ./atuin/ks.yaml
+- ./echo/ks.yaml
