--- a/kubernetes/apps/media/plex/ks.yaml
+++ b/kubernetes/apps/media/plex/ks.yaml
@@ -9,9 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  # components:
-  # - ../../../../components/gatus/guarded
-  # - ../../../../components/volsync
+  components:
+  - ../../../../components/volsync
   dependsOn:
   - name: rook-ceph-cluster
     namespace: rook-ceph
