Gotta use restic

--- a/kubernetes/components/volsync/externalsecret.yaml
+++ b/kubernetes/components/volsync/externalsecret.yaml
@@ -13,9 +13,8 @@ spec:
     template:
       data:
         KOPIA_FS_PATH: /repository
-        KOPIA_PASSWORD: "{{ .KOPIA_PASSWORD }}"
         RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
-        KOPIA_REPOSITORY: s3:https://{{ .CLOUDFLARE_RESTIC_REPO }}/${CLUSTER_NAME}/pvcs/${NAMESPACE}/${APP}
+        RESTIC_REPOSITORY: s3:https://{{ .CLOUDFLARE_RESTIC_REPO }}/${CLUSTER_NAME}/pvcs/${NAMESPACE}/${APP}
         AWS_ACCESS_KEY_ID: "{{ .CLOUDFLARE_AWS_ACCESS_KEY_ID }}"
         AWS_SECRET_ACCESS_KEY: "{{ .CLOUDFLARE_AWS_SECRET_ACCESS_KEY }}"
   dataFrom:
