Add secret subs

--- a/kubernetes/apps/default/atuin/ks.yaml
+++ b/kubernetes/apps/default/atuin/ks.yaml
@@ -13,6 +13,9 @@ spec:
   interval: 1h
   path: ./kubernetes/apps/default/atuin/app
   postBuild:
+    substituteFrom:
+      - name: cluster-secrets
+        kind: Secret
     substitute:
       APP: atuin
       VOLSYNC_CAPACITY: 5Gi
