Add backup to lots of stuff again!

--- a/kubernetes/apps/database/lldap/ks.yaml
+++ b/kubernetes/apps/database/lldap/ks.yaml
@@ -8,9 +8,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  # components:
-  #   # - ../../../../components/gatus/guarded
-  #   - ../../../../components/volsync
+  components:
+  - ../../../../components/volsync-sync-only/
   interval: 1h
   path: ./kubernetes/apps/database/lldap/app
   postBuild:
