--- a/kubernetes/apps/media/plex-auto-languages/ks.yaml
+++ b/kubernetes/apps/media/plex-auto-languages/ks.yaml
@@ -9,9 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  # components:
-  #   # - ../../../../components/gatus/guarded
-  #   - ../../../../components/volsync
+  components:
+  - ../../../../components/volsync-sync-only/
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
@@ -23,7 +22,7 @@ spec:
         kind: Secret
     substitute:
       APP: *app
-      NAMESPACE: *namespace 
+      NAMESPACE: *namespace
       GATUS_PATH: /web/index.html
       VOLSYNC_CAPACITY: 1Gi
       VOLSYNC_CLAIM: *app
