Add coder env secrets

--- a/kubernetes/apps/downloads/coder/app/externalsecret.yaml
+++ b/kubernetes/apps/downloads/coder/app/externalsecret.yaml
@@ -18,3 +18,28 @@ spec:
   dataFrom:
     - extract:
         key: coder
+    - extract:
+        key: volsync-template
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: coder-env
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    name: coder-secrets-env
+    template:
+      data:
+        RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
+        RESTIC_REPOSITORY: s3:https://{{ .CLOUDFLARE_RESTIC_REPO }}/${CLUSTER_NAME}/pvcs/${NAMESPACE}/${APP}
+        AWS_ACCESS_KEY_ID: "{{ .CLOUDFLARE_AWS_ACCESS_KEY_ID }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .CLOUDFLARE_AWS_SECRET_ACCESS_KEY }}"
+  dataFrom:
+    - extract:
+        key: coder
+    - extract:
+        key: volsync-template
